# oauth2-oidc-for-rust-developers

./: .gitignore  Cargo.toml  readme.md
apps/api-actix/: Cargo.toml
apps/api-actix/src/: api.rs  config.rs  main.rs
apps/api-actix/src/api/: me_info.rs
apps/api-actix/src/middleware/: claims.rs  mod.rs  oidc.rs
apps/api-rocket/: Cargo.toml  Rocket.toml
apps/api-rocket/src/: api.rs  main.rs
apps/api-rocket/src/api/: me_info.rs  mod.rs
apps/api-rocket/src/middleware/auth/: jwt_auth_request_guard.rs
apps/api-rocket/src/middleware/auth/jwt/: auth.rs  config.rs  get_max_age.rs  verifier.rs
apps/api-rocket/src/support/: mod.rs
apps/cli-device-flow-demo/: Cargo.toml
apps/cli-device-flow-demo/src/: config.rs  main.rs
apps/cli-device-flow-oauth2/: Cargo.toml
apps/cli-device-flow-oauth2/src/: main.rs
apps/web-frontend-spa/: index.html
keycloak/: docker-compose.yml
keycloak/config/realms/: playground.yml
keycloak/docker/: Dockerfile
requests/: api.http  http-client.env.json  oauth2.http  openid_connect.http
