[package]
name = "cli-device-flow-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.27.0", features = ["full"] } # for our async runtime
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0"
chrono = "0.4"