[package]
name = "cli-device-flow-oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.3.0"
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0"
openssl = "0.10"
reqwest = { version="0.11" }